# tascii_renderer

./: .gitignore  CMakeLists.txt  README.md
include/: fragment_processing.h  math_helper.h  obj.h  object.h  rasterizer.h  terminal.h  vertex_transformer.h  wf_obj.h
src/: fragment_processing.cpp  main.cpp  math_helper.cpp  obj.cpp  object.cpp  rasterizer.cpp  terminal.cpp  vertex_transformer.cpp  wf_obj.cpp
